Bug 352296 - Going back to home folder selects multiple files when files are sorted by size
Summary: Going back to home folder selects multiple files when files are sorted by size
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: folders (other bugs)
Version First Reported In: 16.12.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 385588 399886 400086 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-09-05 00:42 UTC by Roman Gilg
Modified: 2018-12-02 02:28 UTC (History)
13 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Gilg 2015-09-05 00:42:29 UTC
When I am in my home folder H, go in folder A, which is in H, and then go back with the button top left or press backspace all files and folders from approximately the middle until folder A are selected. This only happens in my home folder.

Reproducible: Always
Comment 1 Frank Reininghaus 2015-09-05 08:03:50 UTC
Thanks for the bug report, but I cannot reproduce the problem. What is your Dolphin version?
Comment 2 Roman Gilg 2015-09-05 08:52:25 UTC
(In reply to Frank Reininghaus from comment #1)
> Thanks for the bug report, but I cannot reproduce the problem. What is your
> Dolphin version?

I did a quick video showing version and error behaviour:
https://www.youtube.com/watch?v=GYB07h9ElBg
Comment 3 Alexey 2015-09-06 00:06:34 UTC
Same problem. Also reproducible when refresh (F5).
Debian, KDE 4.14.2, Dolphin 15.04.0
Comment 4 Frank Reininghaus 2015-09-07 20:59:17 UTC
Thanks for the video (the version in the video is 15.08.0). At first I could not reproduce it, but then I noticed that the subfolders in your home folder are not sorted by name.

I can reproduce the problem now if I sort by "Size", and I enable "Remeber view properties for each folder".
Comment 5 Roman Gilg 2015-09-07 21:26:23 UTC
(In reply to Frank Reininghaus from comment #4)
> Thanks for the video (the version in the video is 15.08.0). At first I could
> not reproduce it, but then I noticed that the subfolders in your home folder
> are not sorted by name.
> 
> I can reproduce the problem now if I sort by "Size", and I enable "Remeber
> view properties for each folder".

Yes, you are right. That's some good detective work right here I would say. :)
I just changed my sorting to "By Name" and the error is gone.
Comment 6 Patrick Silva 2017-12-16 19:46:55 UTC
Reproducible with dolphin 17.12 on Arch Linux.
Comment 7 Sergey Oslopov 2018-05-25 23:08:12 UTC
I've got nearly the same problem with Dolphin 17.12.3 on Kubuntu 18.04
Comment 8 Patrick Silva 2018-10-17 10:29:34 UTC
Reproducible with dolphin 18.08.2. Bug 399886 seems related/duplicate.

Operating System: Arch Linux 
KDE Plasma Version: 5.14.1
Qt Version: 5.12.0 beta2
KDE Frameworks Version: 5.51.0
Comment 9 Patrick Silva 2018-10-17 12:00:33 UTC
*** Bug 399886 has been marked as a duplicate of this bug. ***
Comment 10 Christoph Feck 2018-10-21 04:11:58 UTC
*** Bug 400086 has been marked as a duplicate of this bug. ***
Comment 11 Saeid Akbari 2018-10-21 12:35:22 UTC
Same here. Dolphin 18.04.3 on Gentoo Linux.
Comment 12 Adam Fontenot 2018-10-25 08:02:24 UTC
Confirming here as well, 18.08.2

Earlier reports claim this only only happens with the home folder, but I don't believe this is true. It should happen when switching to any folder that is the *parent* of the previous folder. So for example, I see the bug when I sort Downloads by size, visit a subfolder of Downloads, then go back to Downloads.

I believe this is a bug with the intended behavior, which is to select the previous folder when switching to a parent folder.
Comment 13 aldo.mateli 2018-11-20 18:06:46 UTC
*** Bug 385588 has been marked as a duplicate of this bug. ***
Comment 14 Thomas Surrel 2018-12-01 20:19:10 UTC
Git commit 6100f66ae2ba5ae50c2fcc263b6faaa695d37948 by Thomas Surrel.
Committed on 01/12/2018 at 20:18.
Pushed by thsurrel into branch 'Applications/18.12'.

Fix selection when navigating back, with size sorting.

Summary:
KItemListSelectionManager::itemsMoved (called when sorting by size)
was re-activating anchor selection regardless if we actually were
doing an anchored selection. This was leading to an incorrect
selection when navigating back.

Test Plan:
In any folder, sort by size then move to a subfolder. Navigate back
to the parent folder: only the parent folder should be selected.

Reviewers: #dolphin, elvisangelaccio

Reviewed By: #dolphin, elvisangelaccio

Subscribers: elvisangelaccio, broulik, kfm-devel

Tags: #dolphin

Differential Revision: https://phabricator.kde.org/D17042

M  +6    -1    src/kitemviews/kitemlistselectionmanager.cpp

https://commits.kde.org/dolphin/6100f66ae2ba5ae50c2fcc263b6faaa695d37948